--- a/styles.css
+++ b/styles.css
@@ -300,7 +300,11 @@ footer
     color: white;
     padding: 10px;
 }
-
+.copy
+{
+    color: white;
+    font-size: 12px;
+}
 @media (min-width: 768px)
 {
     .food-img
